crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_lambda-2.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(\"let add = fn (x) => fn (y) => x + y\")"
---
[
    Stmt {
        kind: Let {
            is_declare: false,
            is_var: false,
            pattern: Pattern {
                kind: Ident(
                    BindingIdent {
                        name: "add",
                        span: 4..7,
                        mutable: false,
                    },
                ),
                span: 4..7,
                inferred_type: None,
            },
            expr: Some(
                Expr {
                    kind: Function(
                        Function {
                            type_params: None,
                            params: [
                                FuncParam {
                                    pattern: Pattern {
                                        kind: Ident(
                                            BindingIdent {
                                                name: "x",
                                                span: 14..15,
                                                mutable: false,
                                            },
                                        ),
                                        span: 14..15,
                                        inferred_type: None,
                                    },
                                    type_ann: None,
                                    optional: false,
                                },
                            ],
                            body: Expr(
                                Expr {
                                    kind: Function(
                                        Function {
                                            type_params: None,
                                            params: [
                                                FuncParam {
                                                    pattern: Pattern {
                                                        kind: Ident(
                                                            BindingIdent {
                                                                name: "y",
                                                                span: 24..25,
                                                                mutable: false,
                                                            },
                                                        ),
                                                        span: 24..25,
                                                        inferred_type: None,
                                                    },
                                                    type_ann: None,
                                                    optional: false,
                                                },
                                            ],
                                            body: Expr(
                                                Expr {
                                                    kind: Binary(
                                                        Binary {
                                                            left: Expr {
                                                                kind: Ident(
                                                                    Ident {
                                                                        name: "x",
                                                                        span: 30..31,
                                                                    },
                                                                ),
                                                                span: 30..31,
                                                                inferred_type: None,
                                                            },
                                                            op: Plus,
                                                            right: Expr {
                                                                kind: Ident(
                                                                    Ident {
                                                                        name: "y",
                                                                        span: 34..35,
                                                                    },
                                                                ),
                                                                span: 34..35,
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ),
                                                    span: 30..35,
                                                    inferred_type: None,
                                                },
                                            ),
                                            type_ann: None,
                                            is_async: false,
                                            is_gen: false,
                                        },
                                    ),
                                    span: 20..35,
                                    inferred_type: None,
                                },
                            ),
                            type_ann: None,
                            is_async: false,
                            is_gen: false,
                        },
                    ),
                    span: 10..35,
                    inferred_type: None,
                },
            ),
            type_ann: None,
        },
        span: 0..35,
        inferred_type: None,
    },
]
