crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_let_destructuring-4.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(\"let [head, ...tail] = polygon\")"
---
[
    Stmt {
        kind: Decl(
            Decl {
                kind: VarDecl(
                    VarDecl {
                        is_declare: false,
                        is_var: false,
                        pattern: Pattern {
                            kind: Tuple(
                                TuplePat {
                                    elems: [
                                        Some(
                                            TuplePatElem {
                                                pattern: Pattern {
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "head",
                                                            span: 5..9,
                                                            mutable: false,
                                                        },
                                                    ),
                                                    span: 5..9,
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                        Some(
                                            TuplePatElem {
                                                pattern: Pattern {
                                                    kind: Rest(
                                                        RestPat {
                                                            arg: Pattern {
                                                                kind: Ident(
                                                                    BindingIdent {
                                                                        name: "tail",
                                                                        span: 14..18,
                                                                        mutable: false,
                                                                    },
                                                                ),
                                                                span: 14..18,
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ),
                                                    span: 10..14,
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                    ],
                                    optional: false,
                                },
                            ),
                            span: 3..19,
                            inferred_type: None,
                        },
                        expr: Some(
                            Expr {
                                kind: Ident(
                                    Ident {
                                        name: "polygon",
                                        span: 22..29,
                                    },
                                ),
                                span: 22..29,
                                inferred_type: None,
                            },
                        ),
                        type_ann: None,
                    },
                ),
                span: 0..29,
            },
        ),
        span: 0..29,
        inferred_type: None,
    },
]
