crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_mut-2.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"declare let scale: fn (p: mut Point, scale: number) => void\"#)"
---
[
    Stmt {
        kind: Let {
            is_declare: true,
            is_mut: false,
            pattern: Pattern {
                kind: Ident(
                    BindingIdent {
                        name: "scale",
                        span: 12..17,
                        mutable: false,
                    },
                ),
                span: 12..17,
                inferred_type: None,
            },
            expr: None,
            type_ann: Some(
                TypeAnn {
                    kind: Function(
                        FunctionType {
                            type_params: None,
                            params: [
                                FuncParam {
                                    pattern: Pattern {
                                        kind: Ident(
                                            BindingIdent {
                                                name: "p",
                                                span: 23..24,
                                                mutable: false,
                                            },
                                        ),
                                        span: 23..24,
                                        inferred_type: None,
                                    },
                                    type_ann: Some(
                                        TypeAnn {
                                            kind: Mutable(
                                                TypeAnn {
                                                    kind: TypeRef(
                                                        "Point",
                                                        None,
                                                    ),
                                                    span: 30..35,
                                                    inferred_type: None,
                                                },
                                            ),
                                            span: 26..29,
                                            inferred_type: None,
                                        },
                                    ),
                                    optional: false,
                                },
                                FuncParam {
                                    pattern: Pattern {
                                        kind: Ident(
                                            BindingIdent {
                                                name: "scale",
                                                span: 37..42,
                                                mutable: false,
                                            },
                                        ),
                                        span: 37..42,
                                        inferred_type: None,
                                    },
                                    type_ann: Some(
                                        TypeAnn {
                                            kind: Number,
                                            span: 44..50,
                                            inferred_type: None,
                                        },
                                    ),
                                    optional: false,
                                },
                            ],
                            ret: TypeAnn {
                                kind: TypeRef(
                                    "void",
                                    None,
                                ),
                                span: 55..59,
                                inferred_type: None,
                            },
                        },
                    ),
                    span: 19..21,
                    inferred_type: None,
                },
            ),
        },
        span: 0..21,
        inferred_type: None,
    },
]
