crates/escalier_parser/src/snapshots/escalier_parser__stmt_parser__tests__parse_type_alias.snap
---
source: crates/escalier_parser/src/stmt_parser.rs
expression: "parse(r#\"type Foo = Bar\"#)"
---
[
    Stmt {
        kind: Decl(
            Decl {
                kind: TypeDecl(
                    TypeDecl {
                        name: "Foo",
                        type_ann: TypeAnn {
                            kind: TypeRef(
                                "Bar",
                                None,
                            ),
                            span: 11..14,
                            inferred_type: None,
                        },
                        type_params: None,
                    },
                ),
                span: 0..14,
            },
        ),
        span: 0..14,
        inferred_type: None,
    },
]
